force-app/main/default/objects/Lead/fields/op_ai_call_notes__c.field-meta.xml
<CustomField>
    <fullName>op_ai_call_notes__c</fullName>
    <label>AI Call Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>