force-app/main/default/objects/Lead/fields/op_ai_call_outcome__c.field-meta.xml
<CustomField>
    <fullName>op_ai_call_outcome__c</fullName>
    <label>AI Call Outcome</label>
    <type>Text</type>
    <length>255</length>
</CustomField>