force-app/main/default/objects/Lead/fields/op_ai_call_status__c.field-meta.xml
<CustomField>
    <fullName>op_ai_call_status__c</fullName>
    <description>Set to "call" to queue an AI follow-up call. Objection Proof updates it to queued, failed, or complete.</description>
    <label>AI Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>call</fullName>
                <label>Call</label>
            </value>
            <value>
                <fullName>queued</fullName>
                <label>Queued</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>complete</fullName>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>