force-app/main/default/objects/Lead/fields/op_ai_call_type__c.field-meta.xml
<CustomField>
    <fullName>op_ai_call_type__c</fullName>
    <label>AI Call Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>